--- a/src/component/UpdateUserData/style.scss
+++ b/src/component/UpdateUserData/style.scss
@@ -49,3 +49,13 @@
     }
   }
 }
+
+@media screen and (max-width: 450px) {
+  .update {
+    form {
+      button {
+        background-color: rgb(52, 86, 111);
+      }
+    }
+  }
+}
