--- a/src/component/AddProductModal/style.scss
+++ b/src/component/AddProductModal/style.scss
@@ -15,24 +15,14 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    width: 700px; // Default width for larger screens
-    height: 600px; // Default height for larger screens
+    width: 700px;
+    height: 600px;
     max-width: 80%;
     text-align: center;
     display: flex;
     align-items: center;
     flex-direction: column;
     animation: slideIn 0.5s ease-out forwards;
-
-    @media (max-width: 768px) {
-      width: 90%; // Adjust width for tablets
-      height: 500px; // Adjust height for tablets
-    }
-
-    @media (max-width: 480px) {
-      width: 90%; // Adjust width for phones
-      height: 400px; // Adjust height for phones
-    }
 
     form {
       width: clamp(120px, 90%, 100%);
@@ -100,5 +90,77 @@
   to {
     transform: translateY(0);
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .modal {
+    .modal-content {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      max-width: 500px;
+      max-height: 500px;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      animation: slideIn 0.5s ease-out forwards;
+
+      form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+
+        input,
+        textarea,
+        select,
+        button {
+          // width: clamp(200px, 200px, 70%);
+          max-width: 250px;
+        }
+
+        textarea {
+          height: 120px;
+          resize: none;
+        }
+
+        button {
+          background-color: #284773;
+
+          &:hover {
+            transition: 0.4s;
+            background-color: #0d2547;
+          }
+        }
+      }
+
+      .forClose {
+        width: 100%;
+        height: 30px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+
+        button {
+          width: 30px;
+          height: 30px;
+          border: none;
+          border-radius: 4px;
+          color: rgb(72, 71, 71);
+          font-size: 17px;
+          transition: 0.3s;
+          background: transparent;
+
+          &:hover {
+            transition: 0.3s;
+            cursor: pointer;
+          }
+        }
+      }
+    }
   }
 }
