--- a/src/component/Menu/style.scss
+++ b/src/component/Menu/style.scss
@@ -14,13 +14,21 @@
   left: 0;
   z-index: 1000;
 
+  .burgerIcon {
+    display: none;
+    cursor: pointer;
+    color: #fff;
+    width: 100%;
+    justify-content: flex-start;
+    font-size: 30px;
+  }
+
   .myMenuItems {
     width: 80%;
     height: 45px;
     display: flex;
     justify-content: center;
-    // background-color: red;
-    // align-items: center;
+    align-items: center;
 
     ul {
       width: 700px;
@@ -28,7 +36,6 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
-      //   background-color: red;
       flex-wrap: wrap;
 
       li {
@@ -52,6 +59,64 @@
           }
         }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .myMenu {
+    .burgerIcon {
+      display: block;
+    }
+
+    .myMenuItems {
+      display: none;
+      background-color: #1c2f61;
+      width: 100%;
+      min-height: 190px;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      // border-radius: 10px;
+      z-index: 1000;
+      -webkit-box-shadow: 0px 51px 9px 0px rgba(240, 240, 240, 0.489);
+      -moz-box-shadow: 0px 51px 9px 0px rgba(240, 240, 240, 0.51);
+      box-shadow: 0px 51px 9px 0px rgba(240, 240, 240, 0.473);
+
+      ul {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        // justify-content: flex-start;
+        align-items: flex-start;
+        flex-direction: column;
+        padding: 10px;
+
+        li {
+          list-style: none;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          gap: 20px;
+          font-size: 18px;
+
+          a {
+            text-decoration: none;
+            transition: 0.5s;
+            line-height: 1.5;
+
+            &:hover {
+              text-decoration: underline;
+              transition: 0.5s;
+              text-underline-offset: 0.3em;
+            }
+          }
+        }
+      }
+    }
+
+    .myMenuItems.show {
+      display: block;
     }
   }
 }
