--- a/src/pages/Cart/style.scss
+++ b/src/pages/Cart/style.scss
@@ -132,3 +132,133 @@
     }
   }
 }
+
+@media screen and (max-width: 480px) {
+  .forCartProduct {
+    padding: 5px;
+    background-color: white;
+
+    .carousel {
+      width: 100%;
+      height: 150px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid rgb(178, 178, 178);
+      border-radius: 20px;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        transition: transform 0.5s ease;
+      }
+    }
+
+    .cartProduct {
+      width: 100%;
+      min-height: 400px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 10px;
+      background-color: white;
+      border: 1px solid gray;
+      border-radius: 20px;
+      padding: 5px;
+
+      .total {
+        width: 98%;
+        min-height: 35px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+
+        span {
+          min-width: 150px;
+          min-height: 30px;
+          background-color: tomato;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          color: white;
+          border-radius: 4px;
+        }
+      }
+
+      .cartProductItems {
+        width: 98%;
+        min-height: 150px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #cdd4dd;
+        border-radius: 15px;
+        padding: 8px;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+          rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+        transition: 0.3s;
+
+        &:hover {
+          transition: 0.3s;
+          transform: scale(1.01);
+          cursor: pointer;
+        }
+
+        .forImg {
+          width: 30%;
+          height: 100%;
+          // background-color: red;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+
+          img {
+            object-fit: contain;
+            object-position: center;
+            width: 150px;
+            height: 150px;
+          }
+        }
+
+        .cartTexts {
+          width: 50%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+
+          .forBuyOrRemove {
+            width: clamp(80px, 300px, 100%);
+            min-height: 40px;
+            //   background-color: red;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+
+            button {
+              width: 140px;
+              height: 35px;
+              border: none;
+              border-radius: 5px;
+              background-color: #222933;
+              color: white;
+              transition: 0.3s;
+
+              &:hover {
+                transition: 0.3s;
+                background-color: #071c39;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
