--- a/src/pages/Users/style.scss
+++ b/src/pages/Users/style.scss
@@ -12,10 +12,6 @@
   .forImage {
     width: 95%;
     height: 200px;
-    // background-image: url("https://img.freepik.com/premium-photo/print-minimalist-3d-rendering-blue-purple-blue-navy-blue-darker-abstract-wallpaper_551880-765.jpg");
-    // background-position: center;
-    // background-repeat: no-repeat;
-    // background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -135,7 +131,6 @@
           background-repeat: no-repeat;
           box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
             rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-          z-index: 1000;
         }
 
         h5 {
@@ -154,6 +149,158 @@
           transform: scale(1.02);
           transition: 0.4s;
           cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .forUserPage {
+    background: linear-gradient(
+      180deg,
+      rgb(192, 203, 221) 17%,
+      rgb(17, 28, 60) 100%
+    );
+    width: 100%;
+    padding: 8px;
+
+    .forImage {
+      width: 100%;
+      height: 150px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 20px;
+
+      .backgroundVideo {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 20px;
+      }
+    }
+
+    .forUsers {
+      width: 100%;
+
+      .sortButtons {
+        width: 100%;
+        height: 70px;
+        background-color: rgba(235, 235, 235, 0.923);
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        border-radius: 10px;
+
+        .btn {
+          width: clamp(50px, 125px, 100%);
+          min-height: 35px;
+          border-radius: 8px;
+          background-color: rgb(83, 91, 105);
+          font-size: clamp(12px, 13px, 100%);
+          color: rgb(255, 255, 255);
+          text-transform: uppercase;
+          text-align: center;
+          transition: 0.4s;
+
+          &:hover {
+            transition: 0.4s;
+            background-color: rgb(36, 56, 89);
+            cursor: pointer;
+          }
+        }
+      }
+
+      .forAddUser {
+        width: 100%;
+        height: 50px;
+        // background-color: red;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        button {
+          width: 40px;
+          height: 40px;
+          border: none;
+          border-radius: 5px;
+          background-color: #546987;
+          color: white;
+          transition: 0.4s;
+
+          &:hover {
+            transition: 0.4s;
+            background-color: #09182c;
+            cursor: pointer;
+          }
+        }
+      }
+      .forUserss {
+        width: 100%;
+        min-height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+        flex-wrap: wrap;
+
+        .userCard {
+          width: 395px;
+          min-height: 180px;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          flex-direction: column;
+          padding: 10px;
+          border-radius: 10px;
+          background: linear-gradient(
+            180deg,
+            rgba(188, 220, 231, 0.642) 17%,
+            rgb(125, 142, 192) 100%
+          );
+
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+            rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+          transition: 0.4s;
+
+          .userPic {
+            width: clamp(45px, 120px, 100%);
+            height: 120px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            border: 1px solid rgb(201, 201, 201);
+            position: relative;
+            bottom: 20px;
+            background-image: url("https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L3Y5MzctYWV3LTEzOS5qcGc.jpg");
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+              rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+          }
+
+          h5 {
+            text-transform: uppercase;
+            color: white;
+          }
+          p {
+            font-family: sans-serif;
+            color: white;
+          }
+
+          span {
+            font-size: 12px;
+            color: rgb(232, 232, 232);
+          }
+
+          &:hover {
+            transform: scale(1.02);
+            transition: 0.4s;
+            cursor: pointer;
+          }
         }
       }
     }
